<resources>
    <string name="app_name">MvpDemo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scale_down_show_behavior">com.wenjie.utils.ScaleDownShowBehavior</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pf">评分：</string>
    <string name="imageview_content_description">content_description</string>

    <string name="response_data"><![CDATA[登录 Observable<Response<Token>>]]></string>
    <string name="response_data2"><![CDATA[获取用户信息 Observable<Response<UserDetail>>]]></string>

    <string name="baseresponse_data"><![CDATA[登录 Observable<BaseResponse<Token>>]]></string>
    <string name="baseresponse_data2"><![CDATA[获取用户信息 Observable<BaseResponse<UserDetail>>]]></string>

    <string name="data"><![CDATA[登录 Observable<Token>]]></string>
    <string name="data2"><![CDATA[获取用户信息 Observable<UserDetail>]]></string>

</resources>
